api functions tested, endpoints more descriptive
